[level 3] Title: [1차] 셔틀버스, Time: 5.11 ms, Memory: 90.5 MB -BaekjoonHub